// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResevoirService should be able to get aggregate data for tokens 1`] = `
[
  {
    "contractAddress": "0xBC4CA0EdA7647A8aB7C2061c2E118A18a936f13D",
    "currentOwner": {
      "owners": [
        {
          "address": "0x8ad272ac86c6c88683d9a60eb8ed57e6c304bb0c",
          "ownership": {
            "floorAskPrice": null,
            "onSaleCount": "0",
            "tokenCount": "1",
            "topBidValue": 1.146,
            "totalBidValue": 1.146,
          },
        },
      ],
    },
    "highestBid": {
      "contract": "0xbc4ca0eda7647a8ab7c2061c2e118a18a936f13d",
      "createdAt": "2022-11-19T16:23:06.944Z",
      "expiration": 1668961372,
      "feeBps": 50,
      "feeBreakdown": [
        {
          "bps": 50,
          "kind": "marketplace",
          "recipient": "0xd823c605807cc5e6bd6fc0d7e4eea50d3e2d66cd",
        },
      ],
      "id": "0xdf7c9e158540ad179aebcd8845b1ff2bf73afdddf76dfbf6e37419052541f548",
      "isReservoir": null,
      "kind": "x2y2",
      "maker": "0xed2ab4948ba6a909a7751dec4f34f303eb8c7236",
      "price": {
        "amount": {
          "decimal": 56.01,
          "native": 56.01,
          "raw": "56010000000000000000",
          "usd": 67173.81804,
        },
        "currency": {
          "contract": "0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2",
          "decimals": 18,
          "name": "Wrapped Ether",
          "symbol": "WETH",
        },
        "netAmount": {
          "decimal": 55.72995,
          "native": 55.72995,
          "raw": "55729950000000000000",
          "usd": 66837.94895,
        },
      },
      "quantityFilled": 0,
      "quantityRemaining": 1,
      "side": "buy",
      "source": {
        "domain": "x2y2.io",
        "icon": "https://raw.githubusercontent.com/reservoirprotocol/indexer/v5/src/models/sources/x2y2-logo.png",
        "id": "0xdc28ffaea1f91a88fb6fd0a8fe70d71bdd64284c",
        "name": "X2Y2",
        "url": "https://x2y2.io/eth/0xbc4ca0eda7647a8ab7c2061c2e118a18a936f13d/1860",
      },
      "status": "active",
      "taker": "0x0000000000000000000000000000000000000000",
      "tokenSetId": "contract:0xbc4ca0eda7647a8ab7c2061c2e118a18a936f13d",
      "tokenSetSchemaHash": "0x0000000000000000000000000000000000000000000000000000000000000000",
      "updatedAt": "2022-11-19T16:23:06.944Z",
      "validFrom": 1668874986,
      "validUntil": 1668961372,
    },
    "lastSale": {
      "amount": "1",
      "batchIndex": 1,
      "block": 12665954,
      "fillSource": "opensea.io",
      "from": "0x34805e6a3796fb04e82183667a78c2f7bff29170",
      "id": "96d74f48dcd2896e964193bc93889d3ef25ed2b9868a046c1213ba903f8d5386",
      "logIndex": 262,
      "orderId": "0xa4964f4ffa879eb9a53b02f45481b0fafc900c045cf9303560e2eb4c4b7d1c2e",
      "orderKind": "wyvern-v2",
      "orderSide": "ask",
      "orderSource": "opensea.io",
      "price": {
        "amount": {
          "decimal": 12,
          "native": 12,
          "raw": "12000000000000000000",
          "usd": 26778.65178,
        },
        "currency": {
          "contract": "0x0000000000000000000000000000000000000000",
          "decimals": 18,
          "name": "Ether",
          "symbol": "ETH",
        },
      },
      "saleId": "2193ca1b945c46a52d7c16a1eed6beed462be235a50dc53ec6c23a0d71609057",
      "timestamp": 1624121167,
      "to": "0x8ad272ac86c6c88683d9a60eb8ed57e6c304bb0c",
      "token": {
        "collection": {
          "id": null,
          "name": null,
        },
        "contract": "0xbc4ca0eda7647a8ab7c2061c2e118a18a936f13d",
        "image": null,
        "name": null,
        "tokenId": "1860",
      },
      "txHash": "0x7cbbb6da83bf56b8efd02df9242cb024bd68252cc52b1e9c7daf870d5d46ec14",
      "washTradingScore": 1,
    },
    "lowestListing": undefined,
    "tokenId": 1860,
  },
  {
    "contractAddress": "0x09233d553058c2F42ba751C87816a8E9FaE7Ef10",
    "currentOwner": {
      "owners": [
        {
          "address": "0x5ce5b3cf78831dbbd1f63aabcb1757640ec6f84e",
          "ownership": {
            "floorAskPrice": 1.685,
            "onSaleCount": "1",
            "tokenCount": "1",
            "topBidValue": null,
            "totalBidValue": null,
          },
        },
      ],
    },
    "highestBid": {
      "contract": "0x09233d553058c2f42ba751c87816a8e9fae7ef10",
      "createdAt": "2022-11-19T20:08:04.207Z",
      "expiration": 1668889980,
      "feeBps": 1000,
      "feeBreakdown": [
        {
          "bps": 250,
          "kind": "marketplace",
          "recipient": "0x0000a26b00c1f0df003000390027140000faa719",
        },
        {
          "bps": 750,
          "kind": "royalty",
          "recipient": "0x9a7a0670a66a6efe1a15b97f3dc0f8f47d7b11c3",
        },
      ],
      "id": "0xaf6a23069f5270913b7ea4418854138d09e0413991093221b9ce569d5ee5f642",
      "isReservoir": null,
      "kind": "seaport",
      "maker": "0xe8e4322f2f00640714f0a2f314a56fc9f5208136",
      "price": {
        "amount": {
          "decimal": 0.80211,
          "native": 0.80211,
          "raw": "802110000000000000",
          "usd": 961.9852,
        },
        "currency": {
          "contract": "0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2",
          "decimals": 18,
          "name": "Wrapped Ether",
          "symbol": "WETH",
        },
        "netAmount": {
          "decimal": 0.7219,
          "native": 0.7219,
          "raw": "721899000000000000",
          "usd": 865.78668,
        },
      },
      "quantityFilled": 0,
      "quantityRemaining": 1,
      "side": "buy",
      "source": {
        "domain": "opensea.io",
        "icon": "https://raw.githubusercontent.com/reservoirprotocol/indexer/v5/src/models/sources/opensea-logo.svg",
        "id": "0x5b3256965e7c3cf26e11fcaf296dfc8807c01073",
        "name": "OpenSea",
        "url": "https://opensea.io/assets/0x09233d553058c2f42ba751c87816a8e9fae7ef10/4329",
      },
      "status": "active",
      "taker": "0x0000000000000000000000000000000000000000",
      "tokenSetId": "contract:0x09233d553058c2f42ba751c87816a8e9fae7ef10",
      "tokenSetSchemaHash": "0x0000000000000000000000000000000000000000000000000000000000000000",
      "updatedAt": "2022-11-19T20:08:04.207Z",
      "validFrom": 1668888483,
      "validUntil": 1668889980,
    },
    "lastSale": {
      "amount": "1",
      "batchIndex": 1,
      "block": 15831285,
      "fillSource": "opensea.io",
      "from": "0xabbadad51a9da48da2da78b871371eecd85e9c8a",
      "id": "e61863142c4595946233f2c3d0dd3c50ffe112dc45150de63ddb8b70ed32212a",
      "logIndex": 245,
      "orderId": "0xcadf4b8d656897ce46994b1a9cb17f3b6a5e288d1bb81cb9c17e5b8d8a79d826",
      "orderKind": "seaport",
      "orderSide": "ask",
      "orderSource": "opensea.io",
      "price": {
        "amount": {
          "decimal": 1.35,
          "native": 1.35,
          "raw": "1350000000000000000",
          "usd": 1973.76607,
        },
        "currency": {
          "contract": "0x0000000000000000000000000000000000000000",
          "decimals": 18,
          "name": "Ether",
          "symbol": "ETH",
        },
      },
      "saleId": "3299d5375318a2bfbc9cc8505252d834052dfc38bd9b992e08c0e1e87cff601d",
      "timestamp": 1666775735,
      "to": "0x5ce5b3cf78831dbbd1f63aabcb1757640ec6f84e",
      "token": {
        "collection": {
          "id": null,
          "name": null,
        },
        "contract": "0x09233d553058c2f42ba751c87816a8e9fae7ef10",
        "image": null,
        "name": null,
        "tokenId": "4329",
      },
      "txHash": "0xf52e8ca0d6eafbcbc901879f85d1adaa77a5bafb216f8645388af212ed700710",
      "washTradingScore": 0,
    },
    "lowestListing": {
      "contract": "0x09233d553058c2f42ba751c87816a8e9fae7ef10",
      "createdAt": "2022-11-19T14:55:25.199Z",
      "expiration": 1668916856,
      "feeBps": 1000,
      "feeBreakdown": [
        {
          "bps": 250,
          "kind": "marketplace",
          "recipient": "0x0000a26b00c1f0df003000390027140000faa719",
        },
        {
          "bps": 750,
          "kind": "royalty",
          "recipient": "0x9a7a0670a66a6efe1a15b97f3dc0f8f47d7b11c3",
        },
      ],
      "id": "0xbabab7dd8a0c56b66ee9e1569eb549fbe21875b545a247d16e6c2dd5fc9572a6",
      "isDynamic": false,
      "isReservoir": null,
      "kind": "seaport",
      "maker": "0x5ce5b3cf78831dbbd1f63aabcb1757640ec6f84e",
      "price": {
        "amount": {
          "decimal": 1.685,
          "native": 1.685,
          "raw": "1685000000000000000",
          "usd": 2051.82802,
        },
        "currency": {
          "contract": "0x0000000000000000000000000000000000000000",
          "decimals": 18,
          "name": "Ether",
          "symbol": "ETH",
        },
        "netAmount": {
          "decimal": 1.5165,
          "native": 1.5165,
          "raw": "1516500000000000000",
          "usd": 1846.64522,
        },
      },
      "quantityFilled": 0,
      "quantityRemaining": 1,
      "side": "sell",
      "source": {
        "domain": "opensea.io",
        "icon": "https://raw.githubusercontent.com/reservoirprotocol/indexer/v5/src/models/sources/opensea-logo.svg",
        "id": "0x5b3256965e7c3cf26e11fcaf296dfc8807c01073",
        "name": "OpenSea",
        "url": "https://opensea.io/assets/0x09233d553058c2f42ba751c87816a8e9fae7ef10/4329",
      },
      "status": "active",
      "taker": "0x0000000000000000000000000000000000000000",
      "tokenSetId": "token:0x09233d553058c2f42ba751c87816a8e9fae7ef10:4329",
      "tokenSetSchemaHash": "0x0000000000000000000000000000000000000000000000000000000000000000",
      "updatedAt": "2022-11-19T14:55:45.961Z",
      "validFrom": 1668869576,
      "validUntil": 1668916856,
    },
    "tokenId": 4329,
  },
]
`;

exports[`ResevoirService should be able to get listings for tokens 1`] = `
{
  "0x09233d553058c2F42ba751C87816a8E9FaE7Ef10:4329": {
    "contract": "0x09233d553058c2f42ba751c87816a8e9fae7ef10",
    "createdAt": "2022-11-19T14:55:25.199Z",
    "expiration": 1668916856,
    "feeBps": 1000,
    "feeBreakdown": [
      {
        "bps": 250,
        "kind": "marketplace",
        "recipient": "0x0000a26b00c1f0df003000390027140000faa719",
      },
      {
        "bps": 750,
        "kind": "royalty",
        "recipient": "0x9a7a0670a66a6efe1a15b97f3dc0f8f47d7b11c3",
      },
    ],
    "id": "0xbabab7dd8a0c56b66ee9e1569eb549fbe21875b545a247d16e6c2dd5fc9572a6",
    "isDynamic": false,
    "isReservoir": null,
    "kind": "seaport",
    "maker": "0x5ce5b3cf78831dbbd1f63aabcb1757640ec6f84e",
    "price": {
      "amount": {
        "decimal": 1.685,
        "native": 1.685,
        "raw": "1685000000000000000",
        "usd": 2051.82802,
      },
      "currency": {
        "contract": "0x0000000000000000000000000000000000000000",
        "decimals": 18,
        "name": "Ether",
        "symbol": "ETH",
      },
      "netAmount": {
        "decimal": 1.5165,
        "native": 1.5165,
        "raw": "1516500000000000000",
        "usd": 1846.64522,
      },
    },
    "quantityFilled": 0,
    "quantityRemaining": 1,
    "side": "sell",
    "source": {
      "domain": "opensea.io",
      "icon": "https://raw.githubusercontent.com/reservoirprotocol/indexer/v5/src/models/sources/opensea-logo.svg",
      "id": "0x5b3256965e7c3cf26e11fcaf296dfc8807c01073",
      "name": "OpenSea",
      "url": "https://opensea.io/assets/0x09233d553058c2f42ba751c87816a8e9fae7ef10/4329",
    },
    "status": "active",
    "taker": "0x0000000000000000000000000000000000000000",
    "tokenSetId": "token:0x09233d553058c2f42ba751c87816a8e9fae7ef10:4329",
    "tokenSetSchemaHash": "0x0000000000000000000000000000000000000000000000000000000000000000",
    "updatedAt": "2022-11-19T14:55:45.961Z",
    "validFrom": 1668869576,
    "validUntil": 1668916856,
  },
  "0xBC4CA0EdA7647A8aB7C2061c2E118A18a936f13D:1860": undefined,
}
`;

exports[`ResevoirService should be able to get offers/bids for tokens 1`] = `
{
  "0x09233d553058c2F42ba751C87816a8E9FaE7Ef10:4329": {
    "contract": "0x09233d553058c2f42ba751c87816a8e9fae7ef10",
    "createdAt": "2022-11-19T20:08:04.207Z",
    "expiration": 1668889980,
    "feeBps": 1000,
    "feeBreakdown": [
      {
        "bps": 250,
        "kind": "marketplace",
        "recipient": "0x0000a26b00c1f0df003000390027140000faa719",
      },
      {
        "bps": 750,
        "kind": "royalty",
        "recipient": "0x9a7a0670a66a6efe1a15b97f3dc0f8f47d7b11c3",
      },
    ],
    "id": "0xaf6a23069f5270913b7ea4418854138d09e0413991093221b9ce569d5ee5f642",
    "isReservoir": null,
    "kind": "seaport",
    "maker": "0xe8e4322f2f00640714f0a2f314a56fc9f5208136",
    "price": {
      "amount": {
        "decimal": 0.80211,
        "native": 0.80211,
        "raw": "802110000000000000",
        "usd": 961.9852,
      },
      "currency": {
        "contract": "0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2",
        "decimals": 18,
        "name": "Wrapped Ether",
        "symbol": "WETH",
      },
      "netAmount": {
        "decimal": 0.7219,
        "native": 0.7219,
        "raw": "721899000000000000",
        "usd": 865.78668,
      },
    },
    "quantityFilled": 0,
    "quantityRemaining": 1,
    "side": "buy",
    "source": {
      "domain": "opensea.io",
      "icon": "https://raw.githubusercontent.com/reservoirprotocol/indexer/v5/src/models/sources/opensea-logo.svg",
      "id": "0x5b3256965e7c3cf26e11fcaf296dfc8807c01073",
      "name": "OpenSea",
      "url": "https://opensea.io/assets/0x09233d553058c2f42ba751c87816a8e9fae7ef10/4329",
    },
    "status": "active",
    "taker": "0x0000000000000000000000000000000000000000",
    "tokenSetId": "contract:0x09233d553058c2f42ba751c87816a8e9fae7ef10",
    "tokenSetSchemaHash": "0x0000000000000000000000000000000000000000000000000000000000000000",
    "updatedAt": "2022-11-19T20:08:04.207Z",
    "validFrom": 1668888483,
    "validUntil": 1668889980,
  },
  "0xBC4CA0EdA7647A8aB7C2061c2E118A18a936f13D:1860": {
    "contract": "0xbc4ca0eda7647a8ab7c2061c2e118a18a936f13d",
    "createdAt": "2022-11-19T16:23:06.944Z",
    "expiration": 1668961372,
    "feeBps": 50,
    "feeBreakdown": [
      {
        "bps": 50,
        "kind": "marketplace",
        "recipient": "0xd823c605807cc5e6bd6fc0d7e4eea50d3e2d66cd",
      },
    ],
    "id": "0xdf7c9e158540ad179aebcd8845b1ff2bf73afdddf76dfbf6e37419052541f548",
    "isReservoir": null,
    "kind": "x2y2",
    "maker": "0xed2ab4948ba6a909a7751dec4f34f303eb8c7236",
    "price": {
      "amount": {
        "decimal": 56.01,
        "native": 56.01,
        "raw": "56010000000000000000",
        "usd": 67173.81804,
      },
      "currency": {
        "contract": "0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2",
        "decimals": 18,
        "name": "Wrapped Ether",
        "symbol": "WETH",
      },
      "netAmount": {
        "decimal": 55.72995,
        "native": 55.72995,
        "raw": "55729950000000000000",
        "usd": 66837.94895,
      },
    },
    "quantityFilled": 0,
    "quantityRemaining": 1,
    "side": "buy",
    "source": {
      "domain": "x2y2.io",
      "icon": "https://raw.githubusercontent.com/reservoirprotocol/indexer/v5/src/models/sources/x2y2-logo.png",
      "id": "0xdc28ffaea1f91a88fb6fd0a8fe70d71bdd64284c",
      "name": "X2Y2",
      "url": "https://x2y2.io/eth/0xbc4ca0eda7647a8ab7c2061c2e118a18a936f13d/1860",
    },
    "status": "active",
    "taker": "0x0000000000000000000000000000000000000000",
    "tokenSetId": "contract:0xbc4ca0eda7647a8ab7c2061c2e118a18a936f13d",
    "tokenSetSchemaHash": "0x0000000000000000000000000000000000000000000000000000000000000000",
    "updatedAt": "2022-11-19T16:23:06.944Z",
    "validFrom": 1668874986,
    "validUntil": 1668961372,
  },
}
`;
